# crud

./: README.md
backend/: .env  Cargo.toml  tareas.db  tareas.db-shm  tareas.db-wal
backend/migrations/: 0001_initial.sql
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
