[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = { version = "0.8", features = ["console", "net"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement", 
    "HtmlSelectElement", 
    "InputEvent", 
    "Event",
    "Element"
]}
wasm-bindgen-futures = "0.4"